--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/groupFragment">
+    app:startDestination="@id/authFragment">
     <fragment
         android:id="@+id/groupFragment"
         android:name="com.test.medpersonal.presentation.fragments.groupFragment.GroupFragment"
@@ -19,4 +19,19 @@
         android:name="com.test.medpersonal.presentation.fragments.profileFragment.ProfileFragment"
         android:label="fragment_profile"
         tools:layout="@layout/fragment_profile" />
+    <fragment
+        android:id="@+id/authFragment"
+        android:name="com.test.medpersonal.presentation.fragments.authFragment.AuthFragment"
+        android:label="fragment_auth"
+        tools:layout="@layout/fragment_auth" />
+    <fragment
+        android:id="@+id/chatFragment"
+        android:name="com.test.medpersonal.presentation.fragments.chatFragment.ChatFragment"
+        android:label="fragment_chat"
+        tools:layout="@layout/fragment_chat" />
+    <fragment
+        android:id="@+id/registrationFragment"
+        android:name="com.test.medpersonal.presentation.fragments.registrationFragment.RegistrationFragment"
+        android:label="fragment_registration"
+        tools:layout="@layout/fragment_registration" />
 </navigation>
