--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -43,12 +43,25 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/etEmail" />
 
+    <EditText
+        android:id="@+id/regisUser"
+        android:layout_width="315dp"
+        android:layout_height="56dp"
+        android:layout_marginTop="10dp"
+        android:hint="Username"
+        android:inputType="textPersonName|textNoSuggestions"
+        android:maxLines="1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/etPassword"
+        />
+
     <Button
         android:id="@+id/btnRegistration"
         android:layout_width="220dp"
         android:layout_height="56dp"
         app:layout_constraintTop_toBottomOf="@id/etPassword"
-        app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="56dp"
         android:backgroundTint="@color/black"
