--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/authFragment">
+    app:startDestination="@id/chatFragment">
     <fragment
         android:id="@+id/groupFragment"
         android:name="com.test.medpersonal.presentation.fragments.groupFragment.GroupFragment"
@@ -34,4 +34,8 @@
         android:name="com.test.medpersonal.presentation.fragments.registrationFragment.RegistrationFragment"
         android:label="fragment_registration"
         tools:layout="@layout/fragment_registration" />
+    <fragment
+        android:id="@+id/registerFragment"
+        android:name="com.test.medpersonal.presentation.fragments.registerFragment.RegisterFragment"
+        android:label="RegisterFragment" />
 </navigation>
