--- a/app/src/main/res/layout/item_waiting_dialog.xml
+++ b/app/src/main/res/layout/item_waiting_dialog.xml
@@ -69,6 +69,19 @@
             android:layout_marginTop="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnNext"
+            android:text="нажмите для входа"
+            android:textSize="12sp"
+            app:cornerRadius="20dp"
+            android:textColor="@color/white"
+            android:layout_below="@+id/tvWaitingTime"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="60dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+
 
     </RelativeLayout>
 
