--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -4,7 +4,7 @@
     <item
         android:id="@+id/chatFragment"
         android:icon="@drawable/ic_icon_sms"
-        android:title="группы" />
+        android:title="чат" />
 
     <item
         android:id="@+id/homeFragment"
