--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="whatsApp_dark">#006c60</color>
     <color name="whatsApp_light">#00786b</color>
+    <color name="transparent">#80000000</color>
 
 </resources>
