--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@drawable/whatsapp"
     tools:context=".presentation.fragments.chatFragment.ChatFragment">
 
 
@@ -11,33 +12,53 @@
         android:id="@+id/rv_message"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/btn_send"
-        app:layout_constraintStart_toStartOf="@+id/et_text"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="10dp"
         app:layout_constraintBottom_toTopOf="@+id/btn_send"
-        android:layout_margin="8dp"
+        app:layout_constraintEnd_toEndOf="@+id/btn_send"
+        app:layout_constraintStart_toStartOf="@+id/cardView"
+        app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/user_list_item"
 
         />
+
     <Button
         android:id="@+id/btn_send"
         android:layout_width="70dp"
         android:layout_height="40dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_margin="10dp"
         android:background="@color/teal_700"
-        />
+        android:text="enter"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-    <EditText
-        android:id="@+id/et_text"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="meessage"
-        app:layout_constraintStart_toStartOf="parent"
+        android:background="#00000000"
+        android:layout_margin="10dp"
+        app:cardCornerRadius="12dp"
+        app:layout_constraintBottom_toBottomOf="@id/btn_send"
         app:layout_constraintEnd_toStartOf="@+id/btn_send"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_margin="5dp"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/btn_send"
+        >
+        <EditText
+            android:id="@+id/et_text"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            app:circularflow_defaultRadius="12dp"
+            android:height="30dp"
+            android:background="@color/white"
+            android:hint="meessage"
+            android:padding="5dp"
+            android:textColor="@color/black"
+
+            />
+    </androidx.cardview.widget.CardView>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
