--- a/app/src/main/res/layout/fragment_group.xml
+++ b/app/src/main/res/layout/fragment_group.xml
@@ -7,7 +7,7 @@
     tools:context=".presentation.fragments.groupFragment.GroupFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/mRec"
+        android:id="@+id/rv_user"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:listitem="@layout/item_profile"
