--- a/app/src/main/res/layout/main_item.xml
+++ b/app/src/main/res/layout/main_item.xml
@@ -26,4 +26,12 @@
         android:text="Администрация ЦОВП"
         app:layout_constraintTop_toBottomOf="@+id/image" />
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        app:layout_constraintTop_toBottomOf="@+id/tv_title"
+        android:layout_margin="5dp"
+        android:background="#4A4747"
+        />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
